some scrollbar fixes

--- a/renderer/src/components/TextEditor/TextEditor.css
+++ b/renderer/src/components/TextEditor/TextEditor.css
@@ -2,6 +2,7 @@
   background: none;
 }
 
+
 /* .scroller {
   user-select: none !important;
   -webkit-user-select: none !important;
@@ -44,12 +45,14 @@
   display: none;
 }
 
+
 /* .scroller:focus {
   outline: none;
   border-color: inherit;
   -webkit-box-shadow: none;
   box-shadow: none;
 } */
+
 
 /* .scroller::selection {
   background-color: #8CC0DE;
@@ -60,7 +63,7 @@
   float: left; */
   max-width: 100%;
   /* background:red !important; */
-  white-space:nowrap;
+  white-space: nowrap;
   /* padding-left: 5px;
   padding-right: 5px; */
   padding-top: 15px;
@@ -79,7 +82,7 @@
   border-color: transparent;
   /* overflow-wrap: normal; */
   /* background:yellow; */
-  white-space:nowrap;
+  white-space: nowrap;
   position: relative;
   width: 100%;
   pointer-events: none;
@@ -115,7 +118,6 @@
   background-color: transparent;
   /* height: 100%; */
   width: 100%;
-
   overflow-wrap: normal;
   overflow: auto;
 }
@@ -143,11 +145,16 @@
   display: none;
 }
 
+#text-editor::-webkit-scrollbar {
+  display: none;
+}
+
 #editor-child-div {
   color: white;
   z-index: 1;
   pointer-events: none;
   /* overflow: scroll; */
 }
+
 
 /* NO MATTER WHAT THE SOLUTION IS, THE ScROLL ONLY REGISTERING ON TOP ELEMENT */
